syntax = "proto3";

package Gidsiks.ProcessTimeChecker.InterfaceContractLibrary;
option csharp_namespace = "Gidsiks.ProcessTimeChecker.InterfaceContractLibrary";

import "google/protobuf/Empty.proto";
import "google/protobuf/Timestamp.proto";
import "ActivityEvent_message.proto";

service ProcessTimeCheckerService {

	rpc AddWatchedApp (google.protobuf.Empty) returns (google.protobuf.Empty) {};
	rpc DeleteWatchedApp (google.protobuf.Empty) returns (google.protobuf.Empty) {};
	rpc UpdateWatchedApp (google.protobuf.Empty) returns (google.protobuf.Empty) {};

	rpc GetWatchedAppList (google.protobuf.Empty) returns (google.protobuf.Empty) {};

	rpc GetWatchedAppEvents (google.protobuf.Empty) returns (google.protobuf.Empty) {};

	rpc GetActivityEventsLast (GetActivityEventsLastRequest) returns (GetActivityEventsResponse) {};
	rpc GetActivityEventsFromDate (GetActivityEventsFromDateRequest) returns (GetActivityEventsResponse) {};
}

message GetActivityEventsLastRequest {
	int32 from_id = 1;
	int32 count = 2;
}
message GetActivityEventsFromDateRequest {
	google.protobuf.Timestamp from_time = 1;
	google.protobuf.Timestamp to_time = 2;
}
message GetActivityEventsResponse {
	repeated ActivityEvent events = 1;
}